--- a/Todo task/Todo.html
+++ b/Todo task/Todo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo</title>
     
-    <link rel="stylesheet" href="working.css" />
+    <link rel="stylesheet" href="todo.css" />
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
 
   </head>
@@ -28,7 +28,7 @@
       </thead>
       <tbody></tbody>
     </table>
-    <script src="working.js">
+    <script src="todo.js">
     </script>
   </body>
 </html>
